--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Vietoves</title>
+    <title>Žemelapis</title>
     <script src="mapdata.js"></script>
     <script src="worldmap.js"></script>
   </head>
